trunk/Archive2/d8/df331df4e330a2/output
clang version 3.6.0 (tags/RELEASE_360/final 235480)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:17:32: error: expected '>'
void for_each_type(type_list<Ts..>, F&& f)
                               ^
main.cpp:17:32: error: expected '>'
main.cpp:17:32: error: expected ')'
main.cpp:17:19: note: to match this '('
void for_each_type(type_list<Ts..>, F&& f)
                  ^
main.cpp:24:43: error: expected '(' for function-style cast or type construction
    for_each_type(type_list<short, double>,
                  ~~~~~~~~~~~~~~~~~~~~~~~~^
main.cpp:25:27: warning: unused parameter 'x' [-Wunused-parameter]
                  [](auto x) {});
                          ^
1 warning and 4 errors generated.
g++ (GCC) 5.2.0
Copyright (C) 2015 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

main.cpp:17:34: error: template argument 1 is invalid
 void for_each_type(type_list<Ts..>, F&& f)
                                  ^
main.cpp:17:34: error: template argument 1 is invalid
main.cpp:17:34: error: template argument 1 is invalid
main.cpp:17:34: error: template argument 1 is invalid
main.cpp:17:34: error: template argument 1 is invalid
main.cpp:17:20: error: variable or field 'for_each_type' declared void
 void for_each_type(type_list<Ts..>, F&& f)
                    ^
main.cpp:17:34: error: template argument 1 is invalid
 void for_each_type(type_list<Ts..>, F&& f)
                                  ^
main.cpp:17:38: error: expected primary-expression before '&&' token
 void for_each_type(type_list<Ts..>, F&& f)
                                      ^
main.cpp:17:41: error: 'f' was not declared in this scope
 void for_each_type(type_list<Ts..>, F&& f)
                                         ^
main.cpp: In function 'int main()':
main.cpp:24:43: error: expected primary-expression before ',' token
     for_each_type(type_list<short, double>,
                                           ^
main.cpp:25:32: error: 'for_each_type' was not declared in this scope
                   [](auto x) {});
                                ^
